@@ -1,3 +1,8 @@
+2004-10-29  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/goption.c (parse_arg): Convert filenames to UTF-8 on
+	Windows.
+
 2004-10-29  Hans Breuer  <hans@breuer.org>
 
 	* glibconfig.h */makefile.msc.in : updated [and finally fixed my
